<resources>
    <string name="app_name">ProPaintContainerScreen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="restful_retreat">Restful Retreat</string>
    <string name="tb_62">TB-62</string>
    <string name="approximate">approximate</string>
    <string name="price_each">price each</string>
    <string name="coverage">Coverage</string>
    <string name="coverage_dummy_value">400 sq.ft per gallon</string>

    <string name="sheen">Sheen</string>
    <string name="matte">Matte</string>
    <string name="eggshell">EggShell</string>
    <string name="satin">Satin</string>

    <string name="container_size">Container Size</string>
    <string name="_1_gallon">Dummy 1 Gallon</string>
    <string name="_8_fl_oz">Dummy 8 fl oz</string>

    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="paint_amount">₹ %1$d</string>

</resources>